Надо еще ссылку добавить в инст

--- a/Iam/iam.html
+++ b/Iam/iam.html
@@ -103,6 +103,86 @@
                     <a target="_blank" href="https://github.com/GruppaKino/k1no/tree/main/kort"><button type="button">Посмотреть</button></a>
                 </div>
             </div>
+            <div class="myprojeckt_inner2">
+                <div class="tabl1">
+                    <h3>
+                        "anime"
+                    </h3>
+                    <p>
+                        Наверное, один из моих любимых проектов над которыми я работал, кривенький, я тогда не очень хорошо знал flexbox, приходилсоь через margin и padding вырванивать, было прикольно 
+                    </p>
+                    <a href="https://github.com/GruppaKino/k1no/tree/main/anime" target="_blank" rel="noopener noreferrer"><button>Посмотреть</button></a>
+                </div>
+                <div class="tabl4">
+                    <h3>
+                        "DzMenu"
+                    </h3>
+                    <p>
+                        Это я тренировался, с разметкой в flex, что это такое и как оно живет вообще. Менюшку учился делать, и разметке. Простенько, но все равно опыт.
+                    </p>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><button>Посмотреть</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="myfutureplan">
+        <div class="myfutureplan_conteiner">
+            <div class="myfutureplan_inner">
+                <h2>
+                    Мои планы на будущее
+                </h2>
+                <p>
+                    В web-разработке я вижу неограниченные возможности для развития, и у меня есть несколько ключевых целей, к которым я стремлюсь. В ближайшее время я планирую углубить свои знания в таких областях, как JavaScript, современные фреймворки, такие как React и Vue, а также изучить серверную часть веб-разработки. Мне хочется не только создавать красивые и функциональные сайты, но и разрабатывать полноценные веб-приложения, которые решают реальные задачи и предоставляют пользователям лучший опыт. <br>
+                    В долгосрочной перспективе я стремлюсь стать универсальным специалистом, который может не только создавать frontend и backend, но и проектировать сложные архитектуры и запускать масштабные проекты. Я хочу работать над проектами, которые оказывают реальное влияние на бизнес и пользователей, и использовать технологии, которые действительно двигают индустрию вперед. <br>
+                    Для меня важно не просто следовать трендам, но и создавать решения, которые устойчивы в будущем. Я планирую продолжать развиваться, обучаться новому и быть частью быстрорастущего и динамичного мира веб-разработки.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="contact_conteiner">
+            <div class="contact_inner">
+                <div class="telega">
+                    <div>
+                        <a href="https://t.me/wladimir_veredyuk" target="_blank" rel="noopener noreferrer"><img src="img/telega.png" alt="" width="50"></a>
+                    </div>
+                    <div>
+                        <h5>
+                            Telegram
+                        </h5>
+                    </div>
+                </div>
+                <div class="insta">
+                    <div>
+                        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="img/insta.png" alt="" width="50"></a>
+                    </div>
+                    <div>
+                        <h5>
+                            Instagram
+                        </h5>
+                    </div>
+                </div>
+                <div class="vk">
+                    <div>
+                        <a href="https://vk.com/nachmed007" target="_blank" rel="noopener noreferrer"><img src="img/vk.png" alt="" width=""></a>
+                    </div>
+                    <div>
+                        <h5>
+                            VK
+                        </h5>
+                    </div>
+                </div>
+                <div class="github">
+                    <div>
+                        <a href="https://github.com/GruppaKino" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="" width="50"></a>
+                    </div>
+                    <div>
+                        <h5>
+                            GitHub
+                        </h5>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
