готовый макет для финального пректа на Stepik

--- a/FigmaMaket/maket.html
+++ b/FigmaMaket/maket.html
@@ -94,7 +94,7 @@
                         and people love them to the core. View our story to know more.
                     </li>
                     <li>
-                        OUR STORY
+                        <a href="http://">OUR STORY</a>
                     </li>
                 </ul>
             </div>
@@ -127,7 +127,7 @@
                                 </p>
                             </li>
                             <li>
-                                TRY
+                                <a href="http://">TRY</a>
                             </li>
                         </ul>
                         <ul class="t2">
@@ -145,7 +145,25 @@
                                 -- 
                             </li>
                             <li>
-
+                                <a href="http://">SIGN UP</a>
+                            </li>
+                        </ul>
+                        <ul class="t3">
+                            <li>
+                                Professional
+                            </li>
+                            <li>
+                                $297
+                            </li>
+                            <li>
+                                Free Service <br>
+                                Multiple Accounts <br>
+                                Management No <br>
+                                Unlimited Data <br>
+                                Whatever You Need 
+                            </li>
+                            <li>
+                                <a href="http://">SIGN UP</a>
                             </li>
                         </ul>
                     </div>
@@ -153,5 +171,19 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="sec3">
+            <div class="sec3_conteiner">
+                <ul class="sec3_tab">
+                    <li>
+                        All Rights Reserved |  2016  |  Designed with love by <span style="color: rgba(198, 35, 20, 1);">DesignCoon</span>
+                    </li>
+                    <li>
+                        avtomotive
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
