Доработать как будет время

--- a/Linux_web_dow/linux.html
+++ b/Linux_web_dow/linux.html
@@ -24,9 +24,6 @@
                         <a href="#downlouds" rel="noopener noreferrer" id="">СКАЧАТЬ</a>
                     </li>
                     <li>
-                        <a href="#" rel="noopener noreferrer" id="">ОТЗЫВЫ</a>
-                    </li>
-                    <li>
                         <a href="#" rel="noopener noreferrer" id="">КОНТАКТЫ</a>
                     </li>
                 </ul>
@@ -232,6 +229,41 @@
                         </td>
                     </tr>
                 </table>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="contact">
+                <div class="conteiner">
+                    <div class="contactforme">
+                        <h3>
+                            Вередюков Владимир
+                        </h3>
+                        <img src="img/iam.jpg" alt="" width="200">
+                        <p>
+                            Всем привет, если какие то вопросы, пишите мне в социальные сети:
+                        </p>
+                    </div>
+                    <ul class="contactmore">
+                        <li>
+                            <img src="img/telega.png" alt="">
+                            <p>
+                                <a href="https://t.me/wladimir_veredyuk" target="_blank" rel="noopener noreferrer">Telegram</a>
+                            </p>
+                        </li>
+                        <li>
+                            <img src="img/vk.png" alt="">
+                            <p>
+                                <a href="http://" target="_blank" rel="noopener noreferrer">VK</a>
+                            </p>
+                        </li>
+                        <li>   
+                            <img src="img/github.png" alt="">
+                            <p>
+                                <a href="https://github.com/GruppaKino" target="_blank" rel="noopener noreferrer">GitHub</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
