Продолжаю работу над проектом, шапка + начало мейна готовы

--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -50,8 +50,49 @@
         </section>
     </header>
     <main>
-        <section id="">
-
+        <section class="rbworkex">
+            <div class="text_rbworkex">
+                <h4>
+                    work experience
+                </h4>
+                <h2>
+                    Companies I have worked <br> for in the past
+                </h2>
+            </div>
+            <div class="ul_rbworkex">
+                <div class="rbworkex_tab1">
+                    <h2>
+                        01
+                    </h2>
+                    <p>
+                        <span style="color: green;">Google</span>, Interaction Designer
+                    </p>
+                    <p>
+                        <span style="font-size: 16px;line-height: 24px;color: #8491A0;">I currently am the lead designer on the <br> interaction design team for Google Play.</span>
+                </div>
+                <div class="rbworkex_tab2">
+                    <h2>    
+                        02
+                    </h2>
+                    <p>
+                        <span style="color: blue;">Facebook</span>, Product Designer
+                    </p>
+                    <p>
+                        <span style="font-size: 16px;line-height: 24px;color: #8491A0;">I’ve worked on a wide variety of internal tools <br> for facebook over the past 6 years.</span>
+                    </p>
+                </div>
+                <div class="rbworkex_tab3">
+                    <h2>
+                        03
+                    </h2>
+                    <p>
+                        <span style="color: palevioletred;">Dribbble</span>, Graphic Designer
+                    </p>
+                    <p>
+                        <span style="font-size: 16px;line-height: 24px;color: #8491A0;">I started my design career with Dribbble. I was <br> incharge of creating illustrations for the <br> platform.</span>
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
