Продолжаю делать проект

--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -94,6 +94,72 @@
                 </div>
             </div>
         </section>
+        <section class="philosophy">
+            <div class="text_filosophy">
+                <h2>
+                    Philosophy & values
+                </h2>
+                <p>
+                    I think everyone wants the same thing - relationship with humanity, peace with the metaphysical, and experience with the universe. I try to grasp these things with my values: authenticity, creativity, & hospitality.
+                </p>
+                <p id="textendinphilosophy">
+                    More about me
+                </p>
+            </div>
+            <img src="img/Rectangle 39.jpg" alt="" width="720" height="605">
+        </section>
+        <section class="skill">
+            <div class="skill_text">
+                <h2>
+                    Skillset
+                </h2>
+                <p>
+                    With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.
+                </p>
+            </div>
+            <div class="tabl_skill">
+                <div class="colon_one">
+                    <div class="one_colum_skill">
+                        <img src="img/one_colum_skill.png" alt="">
+                        <h3>
+                            Product Design
+                        </h3>
+                        <p>
+                            Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.
+                        </p>
+                    </div>
+                    <div class="two_colum_skill">
+                        <img src="img/two_colum_skill.png" alt="">
+                        <h3>
+                            Motion Design
+                        </h3>
+                        <p>
+                            I started my design journey with motion design in my college days. Motion is something that really fascinates me because of the flexibility of story telling.
+                        </p>
+                    </div>
+                </div>
+                <div class="colon_two">
+                    <div class="one_colum_skill_one">
+                        <img src="img/twick.png" alt="">
+                        <h3>
+                            Visual Design
+                        </h3>
+                        <p>
+                            My experience at dribbble has helped me learn to develop the eye for design. Colors, typography, layout and the whole package.
+                        </p>
+                    </div>
+                    <div class="two_colum_skill_two">
+                        <img src="img/photo1.png" alt="">
+                        <h3>
+                            Photography
+                        </h3>
+                        <p>
+                            Clicking pictures really brings out the creative in me. Phtography really makes you look and percieve things in a different way.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
