Начал делать таблицу My Projects

--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -160,6 +160,57 @@
                 </div>
             </div>
         </section>
+        <section class="logo_after_phil">
+            <ul>
+                <li>
+                    <img src="img/cbre.png" alt="">
+                </li>
+                <li>
+                    <img src="img/epiq.png" alt="">
+                </li>
+                <li>
+                    <img src="img/F.png" alt="">
+                </li>
+                <li>
+                    <img src="img/L.png" alt="">
+                </li>
+            </ul>
+        </section>
+        <section class="myprog">
+            <div class="myprog_tabl">
+                <div class="myproge_tabl_one">
+                    <div class="mpj_one">
+                        <p>
+                            MY PROJECTS
+                        </p>
+                        <h3>
+                            Work that I’ve done <br> for the past 8 years
+                        </h3>
+                    </div>
+                    <img src="img/macandeat.png" alt="" width="636" height="620">
+                    <div class="mpj_two">
+                        <h4>
+                            Restaurant Website Design
+                        </h4>
+                        <p>
+                            I worked with the guys at CBRE to redesign their entire website and mobile app fro both Android and iOS. This project lasted for 4 months and was a very challenging one. 
+                        </p>
+                    </div>
+                    <img src="" alt="">
+                    <div class="mpj_three">
+                        <h4>
+
+                        </h4>
+                        <p>
+
+                        </p>
+                    </div>
+                </div>
+                <div class="myproge_tabl_two">
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
