--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -196,20 +196,56 @@
                             I worked with the guys at CBRE to redesign their entire website and mobile app fro both Android and iOS. This project lasted for 4 months and was a very challenging one. 
                         </p>
                     </div>
-                    <img src="" alt="">
+                    <img src="img/phonefortabl.png" alt="" width="636" height="620">
                     <div class="mpj_three">
                         <h4>
-
+                            Restaurant Website Design
                         </h4>
                         <p>
-
+                            I worked with the guys at CBRE to redesign their entire website and mobile app fro both Android and iOS. This project lasted for 4 months and was a very challenging one.  
                         </p>
                     </div>
                 </div>
                 <div class="myproge_tabl_two">
-
+                    <img src="img/phonewho.png" alt="" width="636" height="620">
+                    <div class="mpj_fore">
+                        <h4>
+                            Restaurant Website Design
+                        </h4>
+                        <p>
+                            I worked with the guys at CBRE to redesign their entire website and mobile app fro both Android and iOS. This project lasted for 4 months and was a very challenging one.
+                        </p>    
+                    </div>
+                    <img src="img/cube.png" alt="" width="636" height="620">
+                    <div class="mpj_five">
+                        <h4>
+                            Restaurant Website Design
+                        </h4>
+                        <p>
+                            I worked with the guys at CBRE to redesign their entire website and mobile app fro both Android and iOS. This project lasted for 4 months and was a very challenging one.
+                        </p>
+                    </div>
+                    <div class="mpj_six">
+                        <h4>
+                            VIEW ALL PROJECTS
+                        </h4>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section class="instagram">
+            <div class="instagram_tab1">
+                <h2>
+                    Instagram
+                </h2>
+                <p>
+                    If you area a person who enjoys photography, then I highly recommend that you check out my Instagram. I’m an avid traveller and I capture the best moments that I would love to cherish with the world
+                </p>
+                <p id="instagram_end_text">
+                    Follow me on IG
+                </p>
+            </div>
+            <img src="img/plain.png" alt="" width="720" height="600">
         </section>
     </main>
 </body>
