Сделал еще несколько секторов, доделать фотки, input и futter

--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -247,6 +247,119 @@
             </div>
             <img src="img/plain.png" alt="" width="720" height="600">
         </section>
+        <section class="drib">
+            <div class="drib1">
+                <h3>
+                    Dribbble
+                </h3>
+                <p id="drib1_text_midl">
+                    Each dribbble shot is made with love and care. Do check out my work on Dribbble. Likes and comments are appreciated.
+                </p>
+                <p id="drib1_text_end">
+                    Follow me on Dribbble
+                </p>
+                <img src="img/greb.png" alt="">
+            </div>
+        </section>
+        <section class="peoplesay">
+            <div class="peoplesay_text">
+                <h3>
+                    This is what people say about me
+                </h3>
+                <p id="peoplesay_mid">
+                    Here are a few lines from people who I have worked with over the past 8+ years in my design career.
+                </p>
+                <p id="peoplesay_end">
+                    See all testimonials
+                </p>
+            </div>
+            <div class="peoplesay_colom">
+                <div class="peoplesay_colom1">
+                    <img src="img/colon1.png" alt="">
+                    <div class="peoplesay_colom1_text">
+                        <p id="peoplesay_colom1_text_start">
+                            ‘’Robin is one of the best designers I have worked with in my entire life. He is a designer who is very capable of taking up complex projects and delivers impeccable design.’’
+                        </p>
+                        <p id="peoplesay_colom1_text_midle">
+                            Richard Owens
+                        </p>
+                        <p id="peoplesay_colom1_text_end">
+                            CEO, Company 1
+                        </p>
+                    </div>
+                </div>
+                <div class="peoplesay_colom2">
+                    <img src="img/colon2.png" alt="">
+                    <div class="peoplesay_colom2_text">
+                        <p id="peoplesay_colom2_text_start">
+                            ‘’I think Robin has an incredible gift. It has been an absolute pleasure to work with a designer of this caliber.’’
+                        </p>
+                        <p id="peoplesay_colom2_text_midle">
+                            Emily Parker
+                        </p>
+                        <p id="peoplesay_colom2_text_end">
+                            CEO, Company 2
+                        </p>
+                    </div>
+                </div>
+                <div class="peoplesay_colom3">
+                    <img src="img/colon3.png" alt="">
+                    <div class="peoplesay_colom3_text">
+                        <p id="peoplesay_colom3_text_start">
+                            ‘’All I can say that, Robin is a phenomenal designer. The wavelength at which he thinks is astoundaing. I love the focus, passion and attention to detial in the design.’’
+                        </p>
+                        <p id="peoplesay_colom3_text_midle">
+                            Vincent Rudd
+                        </p>
+                        <p id="peoplesay_colom3_text_end">
+                            CEO, Company 1
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="photography">
+            <div class="photography_text">
+                <h3>
+                    Photography
+                </h3>
+                <p>
+                    Here is a collection of my best travel pictures that I took while travelling places all around the world.
+                </p>
+            </div>
+            <div class="photography_menu">
+                <ul>
+                    <li>
+                        <a href="http://">ITALY</a>
+                    </li>
+                    <li>
+                        <a href="http://">AUSTRALIA</a>
+                    </li>
+                    <li>
+                        <a href="http://">INDIA</a>
+                    </li>
+                    <li>
+                        <a href="http://">BRAZIL</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="photography_photo">
+                <ul>
+                    <li>
+
+                    </li>
+                    <li>
+
+                    </li>
+                    <li>
+
+                    </li>
+                    <li>
+                        
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
