Завтра доделаю уже сайт

--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -346,16 +346,16 @@
             <div class="photography_photo">
                 <ul>
                     <li>
-
+                        <img src="img/ph1.png" alt="">
                     </li>
                     <li>
-
+                        <img src="img/ph2.png" alt="">
                     </li>
                     <li>
-
+                        <img src="img/ph3.png" alt="">
                     </li>
                     <li>
-                        
+                        <img src="img/ph4.png" alt="">
                     </li>
                 </ul>
             </div>
