Готовый макет про дизайнера - тренировка Flex

--- a/RobinWilliams/rb.html
+++ b/RobinWilliams/rb.html
@@ -360,6 +360,84 @@
                 </ul>
             </div>
         </section>
+        <section class="lgt">
+            <div class="lgt_ul_one">
+                <h3>
+                    Let’s get started
+                </h3>
+                <p>
+                    Now that you know a lot about me, let me know if you are interested to work with me.
+                </p>
+            </div>
+            <div class="lgt_ul_two">
+                <form action="lgt">
+                    <div class="name">
+                        <p>
+                            Name
+                        </p>
+                        <input type="text" name="nameid" id="nameid" placeholder="Write a name:">
+                    </div>
+                    <div class="email">
+                        <p>
+                            Email
+                        </p>
+                        <input type="email" name="emailid" id="emailid" placeholder="Write a email">
+                    </div>
+                    <div class="message">
+                        <p>
+                            Message
+                        </p>
+                        <textarea name="textareaid" id="textareaid" placeholder="Write a message"></textarea>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer>
+        <section class="footer_final">
+            <div class="footer_final_logos">
+                <img src="img/logosRB.png" alt="">
+                <div class="footer_final_logos_ms">
+                    <img src="img/twlogo.svg" alt="">
+                    <img src="img/DRlogo.svg" alt="">
+                    <img src="img/lklogo.svg" alt="">
+                </div>
+                <p>
+                    Not Copyright 2020 • Robin Williams. Webflow cloneable
+                </p>
+            </div>
+            <div class="footer_final_ul">
+                <div class="footer_final_ul_one">
+                    <ul>
+                        <li>
+                            Home
+                        </li>
+                        <li>
+                            About
+                        </li>
+                        <li>
+                            Work
+                        </li>
+                        <li>
+                            Process
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer_final_ul_two">
+                    <ul>
+                        <li>    
+                            Store
+                        </li>
+                        <li>
+                            Blog
+                        </li>
+                        <li>
+                            Reading List
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
